# Fate

./: .gitignore  CMakeLists.txt  Mesh.cpp  Model.h  Physics.cpp  Physics.h  Player.cpp  Quads2D.h  Quads3D.cpp  Quads3D.h  README.md  Renderer.cpp  Shader.h  StaticModel.h  Texture.cpp  Util.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  cross_compile_winx86mingw.cmake  todo.txt
Dependencies/Jolt/Jolt/: ConfigurationString.h  Jolt.cmake  Jolt.h  Jolt.natvis  RegisterTypes.cpp  RegisterTypes.h
Dependencies/Jolt/Jolt/AABBTree/: AABBTreeBuilder.cpp  AABBTreeBuilder.h  AABBTreeToBuffer.h
Dependencies/Jolt/Jolt/AABBTree/NodeCodec/: NodeCodecQuadTreeHalfFloat.h
Dependencies/Jolt/Jolt/AABBTree/TriangleCodec/: TriangleCodecIndexed8BitPackSOA4Flags.h
Dependencies/Jolt/Jolt/Core/: ARMNeon.h  Array.h  BinaryHeap.h  ByteBuffer.h  Color.h  Core.h  FPControlWord.h  FPException.h  FPFlushDenormals.h  Factory.cpp  Factory.h  FixedSizeFreeList.h  FixedSizeFreeList.inl  HashCombine.h  HashTable.h  IssueReporting.cpp  IssueReporting.h  JobSystem.h  JobSystemSingleThreaded.cpp  JobSystemThreadPool.cpp  JobSystemThreadPool.h  JobSystemWithBarrier.cpp  JobSystemWithBarrier.h  LinearCurve.cpp  LinearCurve.h  LockFreeHashMap.h  LockFreeHashMap.inl  Memory.cpp  Memory.h  MutexArray.h  Profiler.cpp  Profiler.h  Profiler.inl  QuickSort.h  RTTI.cpp  RTTI.h  Reference.h  Result.h  STLAlignedAllocator.h  STLAllocator.h  (+16 more)
Dependencies/Jolt/Jolt/Geometry/: AABox.h  ClipPoly.h  ClosestPoint.h  ConvexHullBuilder.cpp  ConvexHullBuilder.h  ConvexHullBuilder2D.cpp  EPAConvexHullBuilder.h  EPAPenetrationDepth.h  Ellipse.h  GJKClosestPoint.h  IndexedTriangle.h  Indexify.cpp  OrientedBox.cpp  Plane.h  RayAABox.h  RaySphere.h  RayTriangle.h  Sphere.h  Triangle.h
Dependencies/Jolt/Jolt/Math/: BVec16.h  BVec16.inl  DMat44.h  DVec3.h  DVec3.inl  Double3.h  EigenValueSymmetric.h  Float2.h  Float3.h  Float4.h  GaussianElimination.h  HalfFloat.h  Mat44.h  Mat44.inl  Math.h  MathTypes.h  Quat.h  Quat.inl  Real.h  Trigonometry.h  UVec4.h  UVec4.inl  Vec3.cpp  Vec3.h  Vec3.inl  Vec4.h  Vec4.inl  Vector.h
Dependencies/Jolt/Jolt/ObjectStream/: GetPrimitiveTypeOfType.h  ObjectStream.cpp  ObjectStream.h  ObjectStreamBinaryIn.cpp  ObjectStreamBinaryIn.h  ObjectStreamBinaryOut.cpp  ObjectStreamBinaryOut.h  ObjectStreamIn.cpp  ObjectStreamIn.h  ObjectStreamOut.cpp  ObjectStreamOut.h  ObjectStreamTextIn.cpp  ObjectStreamTextIn.h  ObjectStreamTextOut.cpp  ObjectStreamTextOut.h  SerializableAttribute.h  SerializableAttributeEnum.h  SerializableAttributeTyped.h  SerializableObject.h  TypeDeclarations.cpp  TypeDeclarations.h
Dependencies/Jolt/Jolt/Physics/: LargeIslandSplitter.cpp  LargeIslandSplitter.h  PhysicsLock.h  PhysicsScene.cpp  PhysicsScene.h  PhysicsSettings.h  PhysicsStepListener.h  PhysicsSystem.cpp  PhysicsSystem.h  PhysicsUpdateContext.h  StateRecorder.h  StateRecorderImpl.h
Dependencies/Jolt/Jolt/Physics/Body/: Body.cpp  Body.h  Body.inl  BodyAccess.h  BodyCreationSettings.h  BodyFilter.h  BodyID.h  BodyInterface.cpp  BodyInterface.h  BodyManager.cpp  BodyManager.h  MassProperties.h  MotionProperties.cpp  MotionProperties.h  MotionProperties.inl  MotionQuality.h
Dependencies/Jolt/Jolt/Physics/Character/: Character.cpp  Character.h  CharacterBase.h  CharacterID.h  CharacterVirtual.cpp  CharacterVirtual.h
Dependencies/Jolt/Jolt/Physics/Collision/: CastConvexVsTriangles.h  CastSphereVsTriangles.cpp  CastSphereVsTriangles.h  CollideConvexVsTriangles.cpp  CollideConvexVsTriangles.h  CollideShape.h  CollideSoftBodyVertexIterator.h  CollideSoftBodyVerticesVsTriangles.h  CollideSphereVsTriangles.h  CollisionCollector.h  CollisionCollectorImpl.h  CollisionDispatch.h  CollisionGroup.h  ContactListener.h  GroupFilter.h  GroupFilterTable.h  InternalEdgeRemovingCollector.h  ManifoldBetweenTwoFaces.cpp  ManifoldBetweenTwoFaces.h  NarrowPhaseQuery.cpp  NarrowPhaseQuery.h  ObjectLayer.h  ObjectLayerPairFilterTable.h  PhysicsMaterial.h  PhysicsMaterialSimple.h  RayCast.h  ShapeCast.h  ShapeFilter.h  SimShapeFilter.h  (+2 more)
Dependencies/Jolt/Jolt/Renderer/: DebugRenderer.cpp  DebugRenderer.h  DebugRendererSimple.cpp  DebugRendererSimple.h
Dependencies/Jolt/Jolt/Skeleton/: SkeletalAnimation.cpp  SkeletalAnimation.h  Skeleton.h  SkeletonMapper.cpp  SkeletonPose.cpp
Dependencies/Jolt/Jolt/TriangleSplitter/: TriangleSplitter.cpp  TriangleSplitterBinning.cpp  TriangleSplitterMean.cpp
Dependencies/assimp/: CMakeLists.txt  linux_to_windows_mingw.cmake
Dependencies/assimp/code/: CMakeLists.txt
Dependencies/assimp/code/Common/: DefaultIOStream.cpp
Dependencies/assimp/include/assimp/: matrix4x4.h
Dependencies/glew-2.1.0/: glew.pc
Dependencies/glfw/: CONTRIBUTORS.md  README.md
Dependencies/glfw/docs/: compile.md
Dependencies/glfw/src/: CMakeLists.txt  mappings.h  wl_platform.h  wl_window.c
game/: Application.cpp  Application.h  Boss.cpp  Scene1.cpp
resources/archive/: 2DFrag.glsl  2DVertex.glsl  LightingFrag.glsl  LightingVertex.glsl  README.txt  main.cpp
resources/models/ar15/: license.txt  scene.gltf
resources/models/city/: license.txt  scene.gltf
resources/models/m4/: license.txt  scene.gltf
resources/models/nyc/: scene.gltf
resources/models/osaka/: scene.gltf
resources/models/spaceship/: license.txt  scene.gltf
resources/models/spaceship2/: license.txt  scene.gltf
resources/shaders/: ModelFrag.glsl  ModelVertex.glsl  PhysicsFrag.glsl  PhysicsVertex.glsl
src/: Audio.cpp  Audio.h  Constants.h  DynamicModel.cpp  DynamicModel.h  FrustumCulling.h  IndexBuffer.cpp  IndexBuffer.h  Input.cpp  Input.h  JPHImpls.cpp  JPHImpls.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Physics.cpp  Physics.h  PhysicsObjectFactory.cpp  PhysicsObjectFactory.h  Player.cpp  Player.h  Quads2D.cpp  Quads2D.h  Quads3D.h  Renderer.h  Shader.cpp  StaticModel.cpp  StaticModel.h  Texture.h  Util.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  WindowsOnly.h
src/game/: Application.cpp  Application.h  Boss.cpp  Boss.h  Scene1.cpp  Scene1.h  truemain.cpp
(+117 files in other folders)
